<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:verticalSpacing="10dp"
    android:background="@drawable/nummern">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_plus"
        android:id="@+id/button_plus"
        android:onClick="startPlus"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/button_plus"
        android:text="@string/button_minus"
        android:id="@+id/button_minus"
        android:onClick="startMinus"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/button_minus"
        android:text="@string/button_multiply"
        android:id="@+id/button_multiply"
        android:onClick="startMultiply"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/button_multiply"
        android:text="@string/button_divide"
        android:id="@+id/button_divide"
        android:onClick="startDivide"/>
    <Space
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_below="@id/button_divide"
        android:id="@+id/spacer1"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/spacer1"
        android:text="@string/button_gallery"
        android:id="@+id/button_startGame"
        android:onClick="startGameAirBattle"/>
    <Space
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_below="@id/button_startGame"
        android:id="@+id/spacer2"/>

    <TextView
        android:text="你的学豆："
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer2"
        android:id="@+id/textView1" />
    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer2"
        android:layout_toRightOf="@id/textView1"
        android:id="@+id/textView2" />
</RelativeLayout>